--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-paginate": "^7.1.3"
+    "react-js-pagination": "^3.0.3"
   }
 }
